<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">AdAway</string>
    <string name="no_root_description">Either the su binary could not be found or you did not allow root permission for AdAway.\n\nWhen the currently running Android operating system is not rooted, you can find information about how to root your device on www.cyanogenmod.com or other Android websites.</string>
    <string name="button_exit">Exit</string>
    <string name="no_root_title">Rooted Android required</string>
    <string name="button_apply">Download files and apply ad blocking</string>
    <string name="no_connection">The connection to the internet is not working.</string>
    <string name="no_connection_title">No Connection</string>
    <string name="button_close">Close</string>
    <string name="download_dialog">Download:</string>
    <string name="menu_hosts_sources">Hosts sources</string>
    <string name="menu_about">About</string>
    <string name="apply_dialog">Apply</string>
    <string name="apply_dialog_hostnames">Parsing and merging hosts files</string>
    <string name="apply_dialog_hosts">Build hosts file</string>
    <string name="apply_dialog_apply">Apply hosts file</string>
    <string name="menu_preferences">Preferences</string>
    <string name="pref_download">Hosts sources</string>
    <string name="pref_check_syntax">Check syntax</string>
    <string name="pref_hosts">Hosts file</string>
    <string name="pref_redirection_ip">Redirection IP</string>
    <string name="pref_check_syntax_key">checkSyntax</string>
    <string name="pref_redirection_ip_key">redirectionIP</string>
    <item format="boolean" type="string" name="pref_check_syntax_def">true</item>
    <item format="string" type="string" name="pref_redirection_ip_def">127.0.0.1</item>
    <string name="pref_check_syntax_summary">Check syntax of hostnames</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="revert_question">Do you really want to revert?</string>
    <string name="revert_successful">You reverted to the default hosts file.\nIt may be necessary to reboot Android for the changes to take effect.\n\nDo you want to reboot?</string>
    <string name="button_revert">Disable ad blocking</string>
    <string name="apply_success">Applying was successfull.\nIt may be necessary to reboot Android for the changes to take effect.\n\nDo you want to reboot?</string>
    <string name="about_description">AdAway is an open source ad blocker for Android.</string>
    <string name="about_license">License: GPL v3</string>
    <string name="about_url">http://code.google.com/p/ad-away/</string>
    <string name="about_version">Version:</string>
    <string name="no_root_url">http://www.cyanogenmod.com</string>
    <string name="about_title">About</string>
    <string name="apply_fail">Applying the hosts file to your system failed!\nYou can try to set another target hosts file in preferences.</string>
    <string name="apply_fail_title">Applying failed</string>
    <string name="revert_problem">Reverting failed.</string>
    <string name="menu_add">Add</string>
    <string name="menu_add_qrcode">Add by scanning QR code</string>
    <string name="no_url">This is not a valid URL!</string>
    <string name="no_url_title">Malformed URL</string>
    <string name="button_add">Add</string>
    <string name="hosts_add_dialog">Input URL to hosts file:</string>
    <string name="checkbox_list_add_dialog_title">Add</string>
    <string name="button_cancel">Cancel</string>
    <string name="hosts_add_dialog_input">http://</string>
    <string name="checkbox_list_empty">No entries</string>
    <string name="checkbox_list_context_delete">Delete</string>
    <string name="checkbox_list_footer">Long press one entry to show a context menu with more options.</string>
    <string name="app_subtitle">Open source ad blocker</string>
    <string name="button_apply_text">All hosts files from the defined sources are downloaded, merged and installed as one hosts file on your system.</string>
    <string name="button_revert_text">Restores the default hosts file on your system.</string>
    <string name="no_sources_title">No Sources defined</string>
    <string name="no_sources">Please add hosts sources to your list.</string>
    <string name="checkbox_list_edit_dialog_title">Edit</string>
    <string name="button_save">Save</string>
    <string name="no_barcode_scanner_title">Install Barcode Scanner?</string>
    <string name="no_barcode_scanner">This application requires Barcode Scanner. Would you like to install it?</string>
    <string name="checkbox_list_context_title">Edit Entry</string>
    <string name="checkbox_list_context_edit">Edit</string>
    <string name="pref_strip_comments_key">stripComments</string>
    <string name="pref_strip_comments">Strip comments</string>
    <string name="pref_strip_comments_summary">Strip comments from hosts sources</string>
    <item name="pref_strip_comments_def" type="string" format="boolean">true</item>
    <string name="no_hostname">This is not a valid hostname!</string>
    <string name="no_hostname_title">Malformed hostname</string>
    <string name="menu_whitelist">Whitelist</string>
    <string name="menu_blacklist">Blacklist</string>
    <string name="apply_dialog_lists">Applying Blacklist and Whitelist</string>
    <string name="menu_redirection_list">Redirection List</string>
    <string name="list_dialog_url">URL:</string>
    <string name="list_dialog_hostname">Hostname:</string>
    <string name="list_dialog_ip">IP (IPv4 or IPv6):</string>
    <string name="no_ip">This is not a valid IP!</string>
    <string name="no_ip_title">Malformed IP</string>
    <string name="download_fail">One of the hosts sources you want to download is not available. Please check the following URL and change it in your hosts sources:</string>
    <string name="download_fail_title">Download failed</string>
    <string name="no_private_file">Private file can not be created.</string>
    <string name="no_private_file_title">Private file creation failed</string>
    <string name="status_checking">Checking for update...</string>
    <string name="status_checking_subtitle">Checking if update is available</string>
    <string name="status_update_available">Update available</string>
    <string name="status_update_available_subtitle">Newer hosts files available</string>
    <string name="status_no_connection">No internet connection</string>
    <string name="status_no_connection_subtitle">No internet connection available</string>
    <string name="status_download_fail">Unavailable source</string>
    <string name="status_download_fail_subtitle">URL: </string>
    <string name="status_enabled">Enabled</string>
    <string name="status_enabled_subtitle">Newest hosts files enabled</string>
    <string name="status_disabled">Disabled</string>
    <string name="status_disabled_subtitle">Disabled</string>
    <string name="about_icons">Some icons are taken from \'Dropbox Emblems Tango by Charles A.\', licensed under Creative Commons Attribution 3.0 Unported License</string>
    <string name="no_busybox">The Busybox binary could not be found. To install it from the Android Market click the Button below.</string>
    <string name="no_busybox_title">No Busybox binary</string>
    <string name="button_busybox">Install Busybox</string>
    <string name="pref_update_check">Check for updates</string>
    <string name="pref_update_check_key">updateCheck</string>
    <string name="pref_update_check_summary">Check for updates on startup</string>
    <item type="string" name="pref_update_check_def" format="boolean">true</item>
    <string name="pref_apply_method">Target hosts file</string>
    <string name="pref_apply_method_summary">DO NOT CHANGE THIS UNLESS YOU KNOW WHAT YOU\'RE DOING</string>
    <string name="pref_apply_method_key">applyMethod</string>
    <string-array name="pref_apply_method_entries">
        <item>/system/etc/hosts</item>
        <item>/data/data/hosts</item>
    </string-array>
    <string-array name="pref_apply_method_entries_values">
        <item>writeToSystem</item>
        <item>writeToDataData</item>
    </string-array>
    <string name="pref_apply_method_def">writeToSystem</string>
    <string name="pref_redirection_ip_summary">All blocked hostnames are redirected to this IP address.</string>
    <string name="donations_description">Do you find this application useful? Support it\'s development by flattring it!</string>
    <string name="donations_title">Donations</string>
    <string name="menu_donations">Donations</string>
    <string name="donations_text">Alternatively you can visit the following URL directly:</string>
    <string name="donations_url">http://flattr.com/thing/369138/AdAway-Ad-blocker-for-Android</string>
    <string name="apply_symlink_missing">Symlink from /data/data/hosts to /system/etc/hosts is not existing! AdAway will not work if it is not existing.\n\nDo you want to try creating a symlink?</string>
    <string name="apply_symlink_missing_title">Symlink missing</string>
    <string name="apply_not_enough_space">Not enough space on yout target partition</string>
    <string name="apply_not_enough_space_title">Not enough space</string>
    <string name="apply_private_file_fail">Downloaded file could not be read.</string>
    <string name="apply_private_file_fail_title">Private file fail</string>
    <string name="apply_remount_fail">Mountin of partition as read/write failed!</string>
    <string name="apply_remount_fail_title">Remount failed</string>
    <string name="apply_copy_fail">Copying of hosts file failed!</string>
    <string name="apply_copy_fail_title">Copy failed</string>
    <string name="apply_success_title">Applying successful</string>
    <string name="revert_successful_title">Reverting successful</string>
    <string name="apply_symlink_successful">Symlink was created successful.\nIt may be necessary to reboot Android for the changes to take effect.\n\nDo you want to reboot?</string>
    <string name="apply_symlink_successful_title">Symlink creation successful</string>
    <string name="apply_symlink_fail">Symlink could not be created by Android.\nThis fails mostly due to a \'feature\' called S-ON on HTC phones!\n\nA solution is to boot your phone into recovery mode and create the symlink there with \'ln -s /data/data/hosts /system/etc/hosts\'.\n\nIf this does not work search the internet for S-OFF and your phone.</string>
    <string name="apply_symlink_fail_title">Symlink creation failed</string>
</resources>
