<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_download">
        <CheckBoxPreference
            android:title="@string/pref_check_syntax"
            android:defaultValue="@string/pref_check_syntax_def"
            android:summary="@string/pref_check_syntax_summary"
            android:key="@string/pref_check_syntax_key"></CheckBoxPreference>
        <CheckBoxPreference
            android:summary="@string/pref_strip_comments_summary"
            android:title="@string/pref_strip_comments"
            android:key="@string/pref_strip_comments_key"
            android:defaultValue="@string/pref_strip_comments_def"></CheckBoxPreference>
        <CheckBoxPreference
            android:key="@string/pref_update_check_key"
            android:title="@string/pref_update_check"
            android:summary="@string/pref_update_check_summary"
            android:defaultValue="@string/pref_update_check_def"></CheckBoxPreference>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_hosts">
        <EditTextPreference
            android:title="@string/pref_redirection_ip"
            android:defaultValue="@string/pref_redirection_ip_def"
            android:key="@string/pref_redirection_ip_key" android:summary="@string/pref_redirection_ip_summary"></EditTextPreference>
        <ListPreference
            android:key="@string/pref_apply_method_key"
            android:summary="@string/pref_apply_method_summary"
            android:title="@string/pref_apply_method"
            android:entries="@array/pref_apply_method_entries"
            android:entryValues="@array/pref_apply_method_entries_values"
            android:defaultValue="@string/pref_apply_method_def"></ListPreference>
    </PreferenceCategory>
</PreferenceScreen>
