<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    android:orientation="vertical">
    <ScrollView
        android:layout_height="wrap_content"
        android:layout_width="fill_parent">
        <LinearLayout
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:padding="20dip">
            <RelativeLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="?android:attr/listPreferredItemHeight"
                android:padding="6dip">
                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginRight="6dip"
                    android:src="@drawable/icon" />
                <TextView
                    android:id="@+id/iconSecondLine"
                    android:layout_width="fill_parent"
                    android:layout_height="26dip"
                    android:layout_toRightOf="@id/icon"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:singleLine="true"
                    android:ellipsize="marquee"
                    android:text="@string/app_subtitle" />
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/icon"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_above="@id/iconSecondLine"
                    android:layout_alignWithParentIfMissing="true"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:gravity="center_vertical"
                    android:text="@string/app_name" />
            </RelativeLayout>
            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="#CCCCCC"
                android:layout_weight="1"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp" />
            <RelativeLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="?android:attr/listPreferredItemHeight"
                android:padding="6dip">
                <FrameLayout
                    android:id="@+id/status_layout"
                    android:layout_marginRight="6dip"
                    android:layout_width="48dip"
                    android:layout_height="48dip"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:orientation="horizontal">
                    <ProgressBar
                        android:id="@+id/status_progress"
                        android:layout_weight="1"
                        android:layout_height="24dip"
                        android:layout_width="24dip"
                        android:layout_gravity="center"
                        android:indeterminate="true"
                        android:visibility="gone"></ProgressBar>
                    <ImageView
                        android:src="@drawable/status_update"
                        android:layout_height="fill_parent"
                        android:layout_width="fill_parent"
                        android:id="@+id/status_icon"
                        android:visibility="gone"></ImageView>
                </FrameLayout>
                <TextView
                    android:id="@+id/status_subtitle"
                    android:layout_width="fill_parent"
                    android:layout_height="26dip"
                    android:layout_toRightOf="@id/status_layout"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:singleLine="true"
                    android:ellipsize="marquee" />
                <TextView
                    android:id="@+id/status_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/status_layout"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_above="@id/status_subtitle"
                    android:layout_alignWithParentIfMissing="true"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:gravity="center_vertical" />
            </RelativeLayout>
            <LinearLayout
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"
                android:paddingTop="10dip"
                android:orientation="vertical">
                <Button
                    android:layout_height="wrap_content"
                    android:id="@+id/apply_button"
                    android:text="@string/button_apply"
                    android:onClick="applyOnClick"
                    android:layout_width="fill_parent"
                    android:layout_weight="1"></Button>
                <TextView
                    android:text="@string/button_apply_text"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:paddingLeft="5dip"
                    android:paddingRight="5dip"
                    android:paddingBottom="20dip"
                    android:textSize="12sp"
                    android:layout_weight="1"></TextView>
                <Button
                    android:id="@+id/revert_button"
                    android:layout_height="wrap_content"
                    android:text="@string/button_revert"
                    android:onClick="revertOnClick"
                    android:layout_width="fill_parent"
                    android:layout_weight="1"></Button>
                <TextView
                    android:text="@string/button_revert_text"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dip"
                    android:paddingRight="5dip"
                    android:layout_width="wrap_content"
                    android:textSize="12sp"
                    android:layout_weight="1"></TextView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>